# oop_exercise_05

./: .gitignore  CMakeLists.txt  report.docx
header/: Iterator.h  List.h  ListEl.h  Read_input.tpp  Rhomb.h  Stack.h  Stack.hpp  Stack.tpp  StackEl.h  StackEl.tpp  Triangle.h  iterator.h
source/: Iterator.cpp  List.cpp  ListEl.cpp  Read_input.cpp  Rhomb.cpp  Stack.cpp  StackEl.cpp  Triangle.cpp  iterator.cpp  main.cpp  main1.cpp
tests/: test_01.txt  test_02.txt
